finished the game

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 		<title>COMP 4303</title>
-		<style>
-			body { margin: 0; }
-		</style>
+		<link rel="stylesheet" href="./styles.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap"
+			rel="stylesheet" />
 	</head>
 	<body>
+		<div id="notification"></div>
 		<script type="module" src="/js/main.js"></script>
+		<script type="module" src="/js/Game/Behaviour/Player.js"></script>
 	</body>
 </html>
